Improved loan detail form and source date

--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -51,10 +51,10 @@
 	<h2> Loan Detail: </h2>
 	<%= f.simple_fields_for :loan_detail do |loan_detail_form| %>
 	    <%= loan_detail_form.association :loan_type,wrapper_html: {class: " span4"} %>
-	    <%= loan_detail_form.input :interest_rate,wrapper_html: {class: " span4"} %>
-	    <%= loan_detail_form.input :grace_period,wrapper_html: {class: " span4"} %>
-	    <%= loan_detail_form.input :maturity,wrapper_html: {class: " span4"} %>
-	    <%= loan_detail_form.input :grant_element,wrapper_html: {class: " span4"} %>
+	    <%= loan_detail_form.input :interest_rate,wrapper_html: {class: " span4"}, hint: "In %, eg. 2.5 for 2.5%." %>
+	    <%= loan_detail_form.input :grace_period,wrapper_html: {class: " span4"}, hint: "Years until first payment." %>
+	    <%= loan_detail_form.input :maturity,wrapper_html: {class: " span4"}, hint: "Years until final payment." %>
+	    <%= loan_detail_form.input :grant_element,wrapper_html: {class: " span4"}, hint: "In %." %>
 	<% end %>
  	<span style='color:#999;padding:5px;' class='span3 btn'><a href='http://www.worldbank.org/ida/ida-grant-element-calculator.html' target='_blank'>Grant Element Calculator <i class='icon-share'></i> </a></span>
 </div>
