adds Loan Details to the export, cache, and search functions

--- a/app/views/projects/_facet_list.html.erb
+++ b/app/views/projects/_facet_list.html.erb
@@ -8,7 +8,9 @@
 				
 					<li class='facet-list-item'>
 						<% if params[f[:sym]].blank? %>
-							<%= link_to row.value, "#{ @current_url}#{ @joiner}#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}#{ (@scope&& !params[:scope]) ? "&scope=#{@scope}" : "" }" %> (<%= row.count %>)
+              <%= link_to row.value, "#{ @current_url}#{ @joiner}"\
+              "#{f[:sym].to_s.gsub(/\s/, '_')}=#{CGI.escape row.value}"\
+              "#{ (@scope && !params[:scope]) ? "&scope=#{@scope}" : "" }"%> (<%= row.count %>)
 						<% else %>
 							<b><%= row.value %></b> (<%= link_to "remove", "#{ @current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
 						<% end %>
@@ -18,7 +20,9 @@
 		</ul>
 	<% else %>
 		<li class='facet-header'> 
-			<b><%= f[:name] %>:</b> <%= @search.facet(f[:sym]).rows[0].value %> (<%= link_to "remove", "#{ @current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>) 
+      <b><%= f[:name] %>:</b> <%= @search.facet(f[:sym]).rows[0].value %> 
+      (<%= link_to "remove", 
+      "#{ @current_url.gsub(/#{f[:sym].to_s.gsub(/\s/, '_')}=[^&]+&?/, '')}" %>)
 		</li>
 	<% end %> 
 <% end %>
