--- a/app/views/projects/_flag_superscript.html.erb
+++ b/app/views/projects/_flag_superscript.html.erb
@@ -1,1 +1,5 @@
-<a inactive_href="#flag_<%= flag.id %>" class='flag-reference' > <sup style="color:<%= flag.flag_type.color %>;">[<%= @flag_counter +=1 %>] </sup></a>
+<a inactive_href="#flag_<%= flag.id %>" class='flag-reference' > 
+  <sup style="color:<%= flag.flag_type.color %>;">
+    [<%= @flag_counter +=1 %>]
+  </sup>
+</a>
