Changes flag tooltip to bootstrap.

--- a/app/views/projects/_flag_superscript.html.erb
+++ b/app/views/projects/_flag_superscript.html.erb
@@ -1,8 +1,12 @@
-
-<a inactive_href="#flag_<%= flag.id %>" class='flag-reference' 
-  title="<%= flag.comment %>">
+<a inactive_href="#flag_<%= flag.id %>" class='flag-reference'
+  title="<%= flag.comment %>" >
 
   <sup style="color:<%= flag.flag_type.color %>;">
     [<%= @flag_counter +=1 %>]
   </sup>
 </a>
+
+<script type="text/javascript">
+  $('.flag-reference').tooltip()
+</script>
+
