--- a/app/views/projects/_project_flags.html.erb
+++ b/app/views/projects/_project_flags.html.erb
@@ -8,12 +8,12 @@
 
         <%= time_ago_in_words(f.updated_at) %> ago, 
         <%= f.owner ? f.owner.name : "An anonymous user" %> flagged
-        <%= if ApplicationHelper::PROJECT_ACCESSORY_OBJECTS.include?(f.flaggable_type) 
+        <%= if ApplicationHelper::PROJECT_ACCESSORY_OBJECTS.include?(f.flaggable_type)
               f.flaggable_type.downcase.a_or_an 
-            else 
-              "#{f.flaggable_type.downcase.a_or_an} code"
-            end %>
-        . <span style="color:
+            else
+              #splits up the flaggable_type to something human-readable
+              f.flaggable_type.gsub(/(?<=[a-z])(?=[A-Z])/, ' ').downcase
+            end %>. <span style="color:
             
               
         <%=f.flag_type.color%>">(<%=f.flag_type.name%>)</span>
