Changed Vague(ODF) to Vague (Official Finance)

--- a/app/views/static_pages/_aggregate_exporter.html.erb
+++ b/app/views/static_pages/_aggregate_exporter.html.erb
@@ -174,8 +174,8 @@ function load_data_preview() {
 	
 function select_scope(scope) {
 
-if (scope=='official_finance') {L
-	$('#flow_class').val(["OOF-like", "ODA-like", "Vague (ODF)"])
+if (scope=='official_finance') {
+	$('#flow_class').val(["OOF-like", "ODA-like", "Vague (Official Finance)"])
 	$('#verified').val("Checked")
 	$("#status").val(["Pipeline/identification", "Implementation", "Completion"])
 	}
