--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -30,5 +30,5 @@
 <![if !IE]><div id="vis"></div><![endif]></div>
 <div id="tooltip"><p id="tooltiptext"></p></div>
 
-<%= javascript_include_tag   "vis/index" %>
+<%= javascript_include_tag   "map/index" %>
 
