--- a/app/views/layouts/_project_menu.html.erb
+++ b/app/views/layouts/_project_menu.html.erb
@@ -22,6 +22,7 @@
    </a>
   
   <ul class="dropdown-menu">
+    <li><%= link_to "Scopes", scopes_path %></li>
     <li><%= link_to "Countries", countries_path %></li>
     <li><%= link_to "Organizations", organizations_path %></li>
     <li class="divider"></li>
