--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -29,50 +29,7 @@ end %>
 <h2>Search Parameters</h2>
 <%= render 'project_search' %>
 <br>
-<div class='row'>
-  <div class="center">
-    <a class="btn btn-primary" data-toggle="modal" href="#myModal">
-       Export as CSV (<%= pluralize(@search.total, "Project") %>)</a>
-
-
-    <div class="modal hide" id="myModal" >
-      <div class="modal-header">
-        <button class="close" data-dismiss="modal">×</button>
-        <h3>Search Export</h3>
-      </div>
-      <div class="modal-body">
-        <p> 
-          <h4> Projects Matched</h4><br>
-          <%= pluralize(@search.total, "Project")  %> 
-          <h4>Search Parameters</h4><br>
-          <%= "Scope: #{params["scope"].gsub('_',' ').titleize}" if params.include?("scope") %>
-          <% 
-            params.each do |param|
-              unless %w(action controller scope).include?(param[0]) %>
-              <%= "#{param[0].gsub('_',' ').titleize}: 
-                   #{param[1].gsub('_',' ').titleize}" %><br>
-              <%end
-            end
-          %>
-          <h4> Sum of projects in USD 2009 </h4></br>
-          <% 
-            sum = 0
-            @search.results.each do |project|
-              proj_usd = project.usd_2009
-              proj_usd ||= 0
-              sum += proj_usd
-            end
-          %>
-          <%= "$#{sum}" %>
-        </p>
-      </div>
-      <div class="modal-footer"
-        <a href="#" class="btn" data-dismiss="modal">Close</a>
-        <a href="#" class="btn btn-primary">Save changes</a>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'export_search' %>
 <%= will_paginate @projects %>
 <br>
 <table id="project-search-results">
