--- a/app/views/projects/_project_search.html.erb
+++ b/app/views/projects/_project_search.html.erb
@@ -1,4 +1,4 @@
-<% @current_url = "#{request.protocol}#{request.host_with_port}#{request.fullpath}".gsub(/page=\d+&*/, '') %>
+<% @current_url = "#{request.protocol}#{request.host_with_port}/projects#{request.fullpath.gsub(/\/(projects)?/, '')}".gsub(/page=\d+&*/, '') %>
 <% @joiner = @current_url.index("?") ? "&" : "?" 
 	%>
 <% @current_url_without_scope = @current_url.gsub(/&?scope=[a-z_]+/, '') %>
