--- a/app/views/projects/_export_search.html.erb
+++ b/app/views/projects/_export_search.html.erb
@@ -63,31 +63,32 @@
           <%= "$#{number_with_precision(sum, precision: 2, delimiter: ',')}
            (USD 2009)" %><br>
           <br>
+
+          
+          <%= email_field_tag 'email', nil, placeholder: 'enter email', class: "span3" %>
+          <!--
           <form action="" id="export-form" class="form-horizontal"> 
             <div class="control-group">
               <input type="text" align "center" id="inputEmail"
               placeholder="Email" class="input-large">
             </div>
           </form>
+          -->
         </p>
       </div>
       <div class="modal-footer">
-        <a href="#" class="btn btn-primary">Email me the CSV</a>
+        <a href="/export" class="btn btn-primary">Email me the CSV</a>
         <a href="#" class="btn" data-dismiss="modal">Close</a>
       </div>
     </div>
   </div>
 </div>
-<!-- jQuery -->
-<script src="assets/js/jquery-1.7.1.min.js"></script>
-<!-- Validate Plugin -->
-<script src="assets/js/jquery.validate.min.js"></script>
 
+
+<script src="http://code.jquery.com/jquery-latest.js"></script>
+<script type="text/javascript" src="http://jzaefferer.github.com/jquery-validation/jquery.validate.js"></script>
 <script>
-  var ValidStatus = $("#eport-form").valid();
-
-  if (ValidStatus == false) {
-    return false;
-  }
-});
+  $( ".selector" ).bind( "dialogopen", function(event, ui) {
+    $( "#export-form").validationEngine();
+  });
 </script>
